fixed a z-index value

--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -44,6 +44,7 @@ a, a:link, a:visited, p, h1, h2, h3, h4, h5, h6, div, span {
 #sticker{
     top: -4rem !important;
     padding-bottom: 1rem;
+    z-index: 9999 !important;
     /*background-color: var(--portfolio-black-1);*/
 }
 .is-sticky{
